<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_search_people"
        android:orderInCategory="98"
        android:title="@string/search_people"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_my_conversations"
        android:orderInCategory="97"
        android:title="@string/my_conversations"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_chat"
        android:orderInCategory="99"
        android:title="@string/chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>